[gd_scene load_steps=4 format=2]

[ext_resource path="res://Art/Buttons/restart-button-idle.png" type="Texture" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://Art/Buttons/restart-button-clicked.png" type="Texture" id=3]

[node name="game" type="Node2D"]
script = ExtResource( 2 )

[node name="equality" type="Label" parent="."]
margin_left = 315.0
margin_top = 395.0
margin_right = 705.0
margin_bottom = 604.0
text = "expression"
align = 1
valign = 1

[node name="evaluate" type="Button" parent="."]
margin_left = 750.0
margin_top = 440.0
margin_right = 918.0
margin_bottom = 513.0
text = "Evaluate"

[node name="clear" type="Button" parent="."]
margin_left = 750.0
margin_top = 339.0
margin_right = 919.0
margin_bottom = 418.0
text = "Clear"

[node name="restart" type="TextureButton" parent="."]
margin_left = 832.0
margin_top = -16.0
margin_right = 1040.0
margin_bottom = 176.0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 3 )
expand = true

[connection signal="pressed" from="evaluate" to="." method="_on_evaluate_pressed"]
[connection signal="pressed" from="clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
